# OH-DCC-MJ

./: .gitignore  README.md  pyproject.toml
.github/workflows/: scrape-daily.yml  test.yml
data/entities/: brand_processor_map.json  example_registry.json
data/latest/: bloom_concentrates.json  bloom_edibles.json  bloom_flower.json  bloom_pre-rolls.json  bloom_tinctures.json  bloom_topicals.json  bloom_vape.json
data/snapshots/2026-06-20/: bloom_all_vape.json  bloom_all_vape_flagged.json
data/snapshots/2026-06-21/: bloom_akron_concentrates.json  (+48 more)
docs/: A1-exa-discovery-agent.md  P2-handoff.md  P3-omc-assessment.md  P4-dcc-license-registry.md  flag-rules.md
ohcanna/: __init__.py  __main__.py  brands.py  cli.py  models.py  storage.py
ohcanna/analysis/: cohort.py  engine.py
ohcanna/community/: __init__.py  accounts.py  models.py  moderation.py  service.py
ohcanna/data/: brands.yaml
ohcanna/entities/: __init__.py  dcc_registry.py  graph.py
ohcanna/publication/: __init__.py  build.py  render.py
ohcanna/sources/: __init__.py  base.py  bloom.py  dutchie.py  klutch.py  locals_cannabis.py
tests/: conftest.py  test_analysis_concentrates.py  test_analysis_edibles.py  test_analysis_flower.py  test_analysis_klutch.py  test_analysis_prerolls.py  test_analysis_tinctures.py  test_analysis_vape.py  test_bloom_flower.py  test_bloom_vape.py  test_cli.py  test_community.py  test_dcc_registry.py  test_entities_graph.py  test_publication_build.py  test_recorder.py  test_sources_dutchie.py  test_sources_klutch.py  test_sources_locals.py  test_storage.py
(+496 files in other folders)
